# thor_trajectory_lib

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml  setup_thor_ws.sh
.github/workflows/: build_cmake.yaml  build_colcon.yaml  clang-format.yaml
cmake_config/: thor_trajectory_libConfig.cmake.in
config/: parameters.yaml
example/: test_thor.cpp
include/openmore/trajectories_processors/: thor_trajectory_processor.h
src/: test_thorTraj.cpp  thor_trajectory_processor.cpp
